# django-haystack

./: .editorconfig  .gitchangelog.rc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  Default.sublime-commands  Git Blame.JSON-tmLanguage  Git Blame.tmLanguage  Git Graph.JSON-tmLanguage  Git Graph.tmLanguage  Git.sublime-settings  LICENSE  MANIFEST.in  Main.sublime-menu  Makefile  README.markdown  README.rst  TODO  feature_1000.py  git.py  pyproject.toml  setup.cfg  setup.py  test.txt  tox.ini  whoosh-0.1.13.patch  whoosh-0.1.15.patch
.github/: issue_template.md  pull_request_template.md
.github/workflows/: black+isort.yml  codeql-analysis.yml  docs.yml  flake8.yml  publish.yml  pypi-release.yml  ruff.yml  test.yml  workflow.yml
djangosearch/: __init__.py  constants.py  fields.py  forms.py  indexes.py  models.py  paginator.py  query.py  results.py  sites.py  urls.py  views.py
djangosearch/backends/: __init__.py  base.py  dummy.py  solr.py
djangosearch/tests/: __init__.py  indexes.py  mocks.py  query.py  sites.py  urls.py  views.py
docs/: Makefile  admin.rst  architecture_overview.rst  autocomplete.rst  backend_support.rst  best_practices.rst  boost.rst  changelog.rst  conf.py  contributing.rst  creating_new_backends.rst  debugging.rst  division_of_labor.rst  do_not_try_this_at_home.rst  faceting.rst  faq.rst  glossary.rst  highlighting.rst  index.rst  indexsite_api.rst  inputtypes.rst  installing_engines.rst  installing_search_engines.rst  management_commands.rst  migration_from_1_to_2.rst  modelindex_api.rst  multiple_index.rst  other_apps.rst  python3.rst  rich_content_extraction.rst  running_tests.rst  searchbackend_api.rst  searchfield_api.rst  searchindex_api.rst  searchquery_api.rst  searchqueryset_api.rst  searchresult_api.rst  searchsite_api.rst  settings.rst  signal_processors.rst  (+7 more)
docs/haystack_theme/: layout.html
example_project/: search_sites.py  settings.py
example_project/bare_bones_app/: models.py  search_indexes.py
example_project/regular_app/: models.py  search_indexes.py
example_project_with_spatial_solr/: regenerate_schema  settings.py  urls.py
example_project_with_spatial_solr/spatial_app/: admin.py  forms.py  models.py  search_indexes.py  views.py
example_project_with_spatial_solr/templates/: search.html
haystack/: __init__.py  admin.py  apps.py  constants.py  exceptions.py  fields.py  forms.py  generic_views.py  healthchecks.py  indexes.py  inputs.py  manager.py  models.py  panels.py  query.py  requirements.txt  routers.py  signals.py  sites.py  urls.py  utils.py  views.py
haystack/backends/: __init__.py  dummy.py  dummy_backend.py  elasticsearch2_backend.py  elasticsearch5_backend.py  solr.py  (+6 more)
requirements/: tests.txt
test_haystack/: __init__.py  mocks.py  results_per_page_urls.py  run_tests.py  settings.py  test_altered_internal_names.py  test_app_loading.py  test_backends.py  test_discovery.py  test_django_config_detection.py  test_fields.py  test_forms.py  test_generic_views.py  test_indexes.py  test_inputs.py  test_loading.py  test_management_commands.py  test_managers.py  test_models.py  test_query.py  test_templatetags.py  test_utils.py  test_views.py  utils.py
tests/: Makefile  discovery_settings.py  elasticsearch_settings.py  fabfile.py  multipleindex_settings.py  overrides_settings.py  requirements.txt  run_all_tests.sh  schema.xml  settings.py  simple_settings.py  site_registration_settings.py  solr4_schema.xml  solr4_solrconfig.xml  solr_settings.py  solr_test_schema.xml  solrconfig.xml  spatial_settings.py  start-solr-test-server.sh  whoosh_settings.py
(+238 files in other folders)
